correction bug white space bouton detail mobile

--- a/res/css/styles.css
+++ b/res/css/styles.css
@@ -489,6 +489,7 @@ main ul > li{
     border-radius: 1em;
     cursor: pointer;
     padding: 0.5em 1em;
+    white-space: nowrap;
     width: auto;
 }
 .detail_top_right button:hover{
